# The-BoxOffice-Science

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  docker-compose.yml  render.yaml  requirements.txt
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth_deps.py  dependencies.py
backend/app/controllers/: auth.py  dashboard.py  nlp.py  predictions.py  production.py
backend/app/core/: config.py
backend/app/db/: seed.py
backend/app/models/: auth_schemas.py  documents.py  financial_specs.py  movie_concept.py
backend/app/services/: auth_service.py  catalog.py  nlp_matcher.py  roi_calculator.py  sentiment_engine.py
backend/app/utils/: errors.py  math_helpers.py
frontend/: .dockerignore  Dockerfile  cypress.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/cypress/e2e/: auth.cy.ts  bos_complete.cy.ts  bos_complete_fixed.cy.ts  bos_v3_complete.cy.ts  dashboard.cy.ts  production.cy.ts  qa_audit.cy.ts
frontend/cypress/fixtures/: prediction.json
frontend/cypress/support/: commands.ts  e2e.ts
frontend/public/: preview.html
frontend/src/: middleware.ts
frontend/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/market/: page.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/hooks/: useApi.ts  useScrollParallax.ts
frontend/src/lib/: api.ts  auth.ts  cookies.ts  utils.ts
frontend/src/store/: useStore.ts
(+18 files in other folders)
